parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal
Rule 2     vars -> VAR tipo COLON id_list SEMICOLON
Rule 3     vars2 -> vars vars2
Rule 4     vars2 -> empty
Rule 5     id_list -> id_list COMMA ID addvar array
Rule 6     id_list -> ID addvar array
Rule 7     array -> L_BRACKET CTE_I addDim R_BRACKET jumpAddr
Rule 8     array -> empty
Rule 9     tipo -> INT current_type
Rule 10    tipo -> FLOAT current_type
Rule 11    tipo -> BOOL current_type
Rule 12    tipo -> CHAR current_type
Rule 13    func -> FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
Rule 14    func2 -> func func2
Rule 15    func2 -> empty
Rule 16    tipo_func -> INT current_type
Rule 17    tipo_func -> FLOAT current_type
Rule 18    tipo_func -> CHAR current_type
Rule 19    tipo_func -> BOOL current_type
Rule 20    tipo_func -> VOID current_type
Rule 21    params -> tipo ID addvar updateParams params2
Rule 22    params -> empty
Rule 23    params2 -> COMMA tipo ID addvar updateParams params2
Rule 24    params2 -> empty
Rule 25    principal -> MAIN start funcChange L_PAREN R_PAREN bloque endProc
Rule 26    bloque -> L_BRACE estatuto_rep R_BRACE
Rule 27    estatuto_rep -> estatuto estatuto_rep
Rule 28    estatuto_rep -> empty
Rule 29    estatuto -> asignacion
Rule 30    estatuto -> condicion
Rule 31    estatuto -> escritura
Rule 32    estatuto -> llamada
Rule 33    estatuto -> retorno
Rule 34    estatuto -> lectura
Rule 35    estatuto -> repeticion
Rule 36    asignacion -> ID stack_operand_id EQUAL stack_operator expOr np_asignacion SEMICOLON
Rule 37    asignacion -> var_dim EQUAL stack_operator expOr np_asignacion SEMICOLON
Rule 38    llamada -> ID llamadaEra L_PAREN fakebottom parm checkParamNum R_PAREN checkparentesis Gosub
Rule 39    func_especial -> MEDIA L_PAREN ID np_funcSpec R_PAREN
Rule 40    func_especial -> MODA L_PAREN ID np_funcSpec R_PAREN
Rule 41    func_especial -> VARIANZA L_PAREN ID np_funcSpec R_PAREN
Rule 42    func_especial -> DESV L_PAREN ID np_funcSpec R_PAREN
Rule 43    func_especial -> MEDIAN L_PAREN ID np_funcSpec R_PAREN
Rule 44    retorno -> RETURN L_PAREN expOr np_return R_PAREN SEMICOLON
Rule 45    lectura -> READ L_PAREN ID np_read R_PAREN SEMICOLON
Rule 46    escritura -> WRITE L_PAREN escritura_rep R_PAREN SEMICOLON
Rule 47    escritura_rep -> escritura_rep COMMA escritura_aux
Rule 48    escritura_rep -> escritura_aux
Rule 49    escritura_aux -> CTE_S printString
Rule 50    escritura_aux -> expOr np_print
Rule 51    condicion -> IF L_PAREN expOr R_PAREN GotoF THEN bloque else_aux
Rule 52    else_aux -> ELSE Goto bloque end_if
Rule 53    else_aux -> end_if
Rule 54    repeticion -> WHILE addJump L_PAREN expOr R_PAREN GotoF DO bloque end_while
Rule 55    parm -> expOr checkParam parm2
Rule 56    parm -> empty
Rule 57    parm2 -> COMMA expOr checkParam parm2
Rule 58    parm2 -> empty
Rule 59    expOr -> expAnd checkAndOr OR stack_operator expOr
Rule 60    expOr -> expAnd checkAndOr
Rule 61    expAnd -> expresion checkAndOr AND stack_operator expAnd
Rule 62    expAnd -> expresion checkAndOr
Rule 63    expresion -> exp checkrelop relop
Rule 64    relop -> GT stack_operator expresion
Rule 65    relop -> LT stack_operator expresion
Rule 66    relop -> EQ stack_operator expresion
Rule 67    relop -> LEQ stack_operator expresion
Rule 68    relop -> GEQ stack_operator expresion
Rule 69    relop -> empty
Rule 70    exp -> termino checkexp masmenos
Rule 71    masmenos -> PLUS stack_operator exp
Rule 72    masmenos -> MINUS stack_operator exp
Rule 73    masmenos -> empty
Rule 74    termino -> factor checkterm multdiv
Rule 75    multdiv -> MULT stack_operator termino
Rule 76    multdiv -> DIV stack_operator termino
Rule 77    multdiv -> empty
Rule 78    factor -> L_PAREN fakebottom expOr R_PAREN checkparentesis
Rule 79    factor -> var_cte
Rule 80    var_cte -> ID stack_operand_id
Rule 81    var_cte -> llamada
Rule 82    var_cte -> CTE_I stack_operand_int
Rule 83    var_cte -> CTE_F stack_operand_float
Rule 84    var_cte -> CTE_CHAR stack_operand_char
Rule 85    var_cte -> var_dim
Rule 86    var_cte -> func_especial
Rule 87    var_dim -> ID stack_operand_id L_BRACKET verDim fakebottom expOr cuadVer R_BRACKET checkparentesis verDimNum cuadVarDim
Rule 88    empty -> <empty>
Rule 89    create_dirfunc -> <empty>
Rule 90    current_type -> <empty>
Rule 91    addvar -> <empty>
Rule 92    addfunc -> <empty>
Rule 93    stack_operand_id -> <empty>
Rule 94    stack_operand_int -> <empty>
Rule 95    stack_operand_float -> <empty>
Rule 96    stack_operand_char -> <empty>
Rule 97    stack_operator -> <empty>
Rule 98    fakebottom -> <empty>
Rule 99    checkparentesis -> <empty>
Rule 100   checkAndOr -> <empty>
Rule 101   checkterm -> <empty>
Rule 102   checkexp -> <empty>
Rule 103   checkrelop -> <empty>
Rule 104   llamadaEra -> <empty>
Rule 105   np_asignacion -> <empty>
Rule 106   np_return -> <empty>
Rule 107   GotoF -> <empty>
Rule 108   Goto -> <empty>
Rule 109   end_if -> <empty>
Rule 110   end_while -> <empty>
Rule 111   addJump -> <empty>
Rule 112   endFunc -> <empty>
Rule 113   updateParams -> <empty>
Rule 114   funcJump -> <empty>
Rule 115   funcChange -> <empty>
Rule 116   np_print -> <empty>
Rule 117   printString -> <empty>
Rule 118   np_read -> <empty>
Rule 119   np_funcSpec -> <empty>
Rule 120   start -> <empty>
Rule 121   endProc -> <empty>
Rule 122   checkParam -> <empty>
Rule 123   checkParamNum -> <empty>
Rule 124   Gosub -> <empty>
Rule 125   addDim -> <empty>
Rule 126   jumpAddr -> <empty>
Rule 127   verDim -> <empty>
Rule 128   verDimNum -> <empty>
Rule 129   cuadVer -> <empty>
Rule 130   cuadVarDim -> <empty>

Terminals, with rules where they appear

AND                  : 61
BOOL                 : 11 19
CHAR                 : 12 18
COLON                : 2
COMMA                : 5 23 47 57
CTE_CHAR             : 84
CTE_F                : 83
CTE_I                : 7 82
CTE_S                : 49
DESV                 : 42
DIV                  : 76
DO                   : 54
ELSE                 : 52
EQ                   : 66
EQUAL                : 36 37
FLOAT                : 10 17
FUNCTION             : 13
GEQ                  : 68
GT                   : 64
ID                   : 1 5 6 13 21 23 36 38 39 40 41 42 43 45 80 87
IF                   : 51
INT                  : 9 16
LEQ                  : 67
LT                   : 65
L_BRACE              : 13 26
L_BRACKET            : 7 87
L_PAREN              : 13 25 38 39 40 41 42 43 44 45 46 51 54 78
MAIN                 : 25
MEDIA                : 39
MEDIAN               : 43
MINUS                : 72
MODA                 : 40
MULT                 : 75
OR                   : 59
PLUS                 : 71
PROGRAM              : 1
READ                 : 45
RETURN               : 44
R_BRACE              : 13 26
R_BRACKET            : 7 87
R_PAREN              : 13 25 38 39 40 41 42 43 44 45 46 51 54 78
SEMICOLON            : 1 2 36 37 44 45 46
THEN                 : 51
VAR                  : 2
VARIANZA             : 41
VOID                 : 20
WHILE                : 54
WRITE                : 46
error                : 

Nonterminals, with rules where they appear

Gosub                : 38
Goto                 : 52
GotoF                : 51 54
PROGRAMA             : 0
addDim               : 7
addJump              : 54
addfunc              : 13
addvar               : 5 6 21 23
array                : 5 6
asignacion           : 29
bloque               : 25 51 52 54
checkAndOr           : 59 60 61 62
checkParam           : 55 57
checkParamNum        : 38
checkexp             : 70
checkparentesis      : 38 78 87
checkrelop           : 63
checkterm            : 74
condicion            : 30
create_dirfunc       : 1
cuadVarDim           : 87
cuadVer              : 87
current_type         : 9 10 11 12 16 17 18 19 20
else_aux             : 51
empty                : 4 8 15 22 24 28 56 58 69 73 77
endFunc              : 13
endProc              : 25
end_if               : 52 53
end_while            : 54
escritura            : 31
escritura_aux        : 47 48
escritura_rep        : 46 47
estatuto             : 27
estatuto_rep         : 13 26 27
exp                  : 63 71 72
expAnd               : 59 60 61
expOr                : 36 37 44 50 51 54 55 57 59 78 87
expresion            : 61 62 64 65 66 67 68
factor               : 74
fakebottom           : 38 78 87
func                 : 14
func2                : 1 14
funcChange           : 25
funcJump             : 13
func_especial        : 86
id_list              : 2 5
jumpAddr             : 7
lectura              : 34
llamada              : 32 81
llamadaEra           : 38
masmenos             : 70
multdiv              : 74
np_asignacion        : 36 37
np_funcSpec          : 39 40 41 42 43
np_print             : 50
np_read              : 45
np_return            : 44
params               : 13
params2              : 21 23
parm                 : 38
parm2                : 55 57
principal            : 1
printString          : 49
relop                : 63
repeticion           : 35
retorno              : 33
stack_operand_char   : 84
stack_operand_float  : 83
stack_operand_id     : 36 80 87
stack_operand_int    : 82
stack_operator       : 36 37 59 61 64 65 66 67 68 71 72 75 76
start                : 25
termino              : 70 75 76
tipo                 : 2 21 23
tipo_func            : 13
updateParams         : 21 23
var_cte              : 79
var_dim              : 37 85
vars                 : 3
vars2                : 1 3 13
verDim               : 87
verDimNum            : 87

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . create_dirfunc ID SEMICOLON vars2 func2 principal
    (89) create_dirfunc -> .

    ID              reduce using rule 89 (create_dirfunc -> .)

    create_dirfunc                 shift and go to state 3

state 3

    (1) PROGRAMA -> PROGRAM create_dirfunc . ID SEMICOLON vars2 func2 principal

    ID              shift and go to state 4


state 4

    (1) PROGRAMA -> PROGRAM create_dirfunc ID . SEMICOLON vars2 func2 principal

    SEMICOLON       shift and go to state 5


state 5

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON . vars2 func2 principal
    (3) vars2 -> . vars vars2
    (4) vars2 -> . empty
    (2) vars -> . VAR tipo COLON id_list SEMICOLON
    (88) empty -> .

    VAR             shift and go to state 9
    FUNCTION        reduce using rule 88 (empty -> .)
    MAIN            reduce using rule 88 (empty -> .)

    vars2                          shift and go to state 6
    vars                           shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 . func2 principal
    (14) func2 -> . func func2
    (15) func2 -> . empty
    (13) func -> . FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (88) empty -> .

    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 88 (empty -> .)

    func2                          shift and go to state 10
    func                           shift and go to state 11
    empty                          shift and go to state 12

state 7

    (3) vars2 -> vars . vars2
    (3) vars2 -> . vars vars2
    (4) vars2 -> . empty
    (2) vars -> . VAR tipo COLON id_list SEMICOLON
    (88) empty -> .

    VAR             shift and go to state 9
    FUNCTION        reduce using rule 88 (empty -> .)
    MAIN            reduce using rule 88 (empty -> .)
    L_BRACE         reduce using rule 88 (empty -> .)

    vars                           shift and go to state 7
    vars2                          shift and go to state 14
    empty                          shift and go to state 8

state 8

    (4) vars2 -> empty .

    FUNCTION        reduce using rule 4 (vars2 -> empty .)
    MAIN            reduce using rule 4 (vars2 -> empty .)
    L_BRACE         reduce using rule 4 (vars2 -> empty .)


state 9

    (2) vars -> VAR . tipo COLON id_list SEMICOLON
    (9) tipo -> . INT current_type
    (10) tipo -> . FLOAT current_type
    (11) tipo -> . BOOL current_type
    (12) tipo -> . CHAR current_type

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19

    tipo                           shift and go to state 15

state 10

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 . principal
    (25) principal -> . MAIN start funcChange L_PAREN R_PAREN bloque endProc

    MAIN            shift and go to state 21

    principal                      shift and go to state 20

state 11

    (14) func2 -> func . func2
    (14) func2 -> . func func2
    (15) func2 -> . empty
    (13) func -> . FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (88) empty -> .

    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 88 (empty -> .)

    func                           shift and go to state 11
    func2                          shift and go to state 22
    empty                          shift and go to state 12

state 12

    (15) func2 -> empty .

    MAIN            reduce using rule 15 (func2 -> empty .)


state 13

    (13) func -> FUNCTION . tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (16) tipo_func -> . INT current_type
    (17) tipo_func -> . FLOAT current_type
    (18) tipo_func -> . CHAR current_type
    (19) tipo_func -> . BOOL current_type
    (20) tipo_func -> . VOID current_type

    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    VOID            shift and go to state 28

    tipo_func                      shift and go to state 23

state 14

    (3) vars2 -> vars vars2 .

    FUNCTION        reduce using rule 3 (vars2 -> vars vars2 .)
    MAIN            reduce using rule 3 (vars2 -> vars vars2 .)
    L_BRACE         reduce using rule 3 (vars2 -> vars vars2 .)


state 15

    (2) vars -> VAR tipo . COLON id_list SEMICOLON

    COLON           shift and go to state 29


state 16

    (9) tipo -> INT . current_type
    (90) current_type -> .

    COLON           reduce using rule 90 (current_type -> .)
    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 30

state 17

    (10) tipo -> FLOAT . current_type
    (90) current_type -> .

    COLON           reduce using rule 90 (current_type -> .)
    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 31

state 18

    (11) tipo -> BOOL . current_type
    (90) current_type -> .

    COLON           reduce using rule 90 (current_type -> .)
    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 32

state 19

    (12) tipo -> CHAR . current_type
    (90) current_type -> .

    COLON           reduce using rule 90 (current_type -> .)
    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 33

state 20

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal .

    $end            reduce using rule 1 (PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal .)


state 21

    (25) principal -> MAIN . start funcChange L_PAREN R_PAREN bloque endProc
    (120) start -> .

    L_PAREN         reduce using rule 120 (start -> .)

    start                          shift and go to state 34

state 22

    (14) func2 -> func func2 .

    MAIN            reduce using rule 14 (func2 -> func func2 .)


state 23

    (13) func -> FUNCTION tipo_func . ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc

    ID              shift and go to state 35


state 24

    (16) tipo_func -> INT . current_type
    (90) current_type -> .

    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 36

state 25

    (17) tipo_func -> FLOAT . current_type
    (90) current_type -> .

    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 37

state 26

    (18) tipo_func -> CHAR . current_type
    (90) current_type -> .

    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 38

state 27

    (19) tipo_func -> BOOL . current_type
    (90) current_type -> .

    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 39

state 28

    (20) tipo_func -> VOID . current_type
    (90) current_type -> .

    ID              reduce using rule 90 (current_type -> .)

    current_type                   shift and go to state 40

state 29

    (2) vars -> VAR tipo COLON . id_list SEMICOLON
    (5) id_list -> . id_list COMMA ID addvar array
    (6) id_list -> . ID addvar array

    ID              shift and go to state 42

    id_list                        shift and go to state 41

state 30

    (9) tipo -> INT current_type .

    COLON           reduce using rule 9 (tipo -> INT current_type .)
    ID              reduce using rule 9 (tipo -> INT current_type .)


state 31

    (10) tipo -> FLOAT current_type .

    COLON           reduce using rule 10 (tipo -> FLOAT current_type .)
    ID              reduce using rule 10 (tipo -> FLOAT current_type .)


state 32

    (11) tipo -> BOOL current_type .

    COLON           reduce using rule 11 (tipo -> BOOL current_type .)
    ID              reduce using rule 11 (tipo -> BOOL current_type .)


state 33

    (12) tipo -> CHAR current_type .

    COLON           reduce using rule 12 (tipo -> CHAR current_type .)
    ID              reduce using rule 12 (tipo -> CHAR current_type .)


state 34

    (25) principal -> MAIN start . funcChange L_PAREN R_PAREN bloque endProc
    (115) funcChange -> .

    L_PAREN         reduce using rule 115 (funcChange -> .)

    funcChange                     shift and go to state 43

state 35

    (13) func -> FUNCTION tipo_func ID . addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (92) addfunc -> .

    L_PAREN         reduce using rule 92 (addfunc -> .)

    addfunc                        shift and go to state 44

state 36

    (16) tipo_func -> INT current_type .

    ID              reduce using rule 16 (tipo_func -> INT current_type .)


state 37

    (17) tipo_func -> FLOAT current_type .

    ID              reduce using rule 17 (tipo_func -> FLOAT current_type .)


state 38

    (18) tipo_func -> CHAR current_type .

    ID              reduce using rule 18 (tipo_func -> CHAR current_type .)


state 39

    (19) tipo_func -> BOOL current_type .

    ID              reduce using rule 19 (tipo_func -> BOOL current_type .)


state 40

    (20) tipo_func -> VOID current_type .

    ID              reduce using rule 20 (tipo_func -> VOID current_type .)


state 41

    (2) vars -> VAR tipo COLON id_list . SEMICOLON
    (5) id_list -> id_list . COMMA ID addvar array

    SEMICOLON       shift and go to state 45
    COMMA           shift and go to state 46


state 42

    (6) id_list -> ID . addvar array
    (91) addvar -> .

    L_BRACKET       reduce using rule 91 (addvar -> .)
    SEMICOLON       reduce using rule 91 (addvar -> .)
    COMMA           reduce using rule 91 (addvar -> .)

    addvar                         shift and go to state 47

state 43

    (25) principal -> MAIN start funcChange . L_PAREN R_PAREN bloque endProc

    L_PAREN         shift and go to state 48


state 44

    (13) func -> FUNCTION tipo_func ID addfunc . L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc

    L_PAREN         shift and go to state 49


state 45

    (2) vars -> VAR tipo COLON id_list SEMICOLON .

    VAR             reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)
    FUNCTION        reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)
    MAIN            reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)
    L_BRACE         reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)


state 46

    (5) id_list -> id_list COMMA . ID addvar array

    ID              shift and go to state 50


state 47

    (6) id_list -> ID addvar . array
    (7) array -> . L_BRACKET CTE_I addDim R_BRACKET jumpAddr
    (8) array -> . empty
    (88) empty -> .

    L_BRACKET       shift and go to state 52
    SEMICOLON       reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)

    array                          shift and go to state 51
    empty                          shift and go to state 53

state 48

    (25) principal -> MAIN start funcChange L_PAREN . R_PAREN bloque endProc

    R_PAREN         shift and go to state 54


state 49

    (13) func -> FUNCTION tipo_func ID addfunc L_PAREN . params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (21) params -> . tipo ID addvar updateParams params2
    (22) params -> . empty
    (9) tipo -> . INT current_type
    (10) tipo -> . FLOAT current_type
    (11) tipo -> . BOOL current_type
    (12) tipo -> . CHAR current_type
    (88) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19
    R_PAREN         reduce using rule 88 (empty -> .)

    params                         shift and go to state 55
    tipo                           shift and go to state 56
    empty                          shift and go to state 57

state 50

    (5) id_list -> id_list COMMA ID . addvar array
    (91) addvar -> .

    L_BRACKET       reduce using rule 91 (addvar -> .)
    SEMICOLON       reduce using rule 91 (addvar -> .)
    COMMA           reduce using rule 91 (addvar -> .)

    addvar                         shift and go to state 58

state 51

    (6) id_list -> ID addvar array .

    SEMICOLON       reduce using rule 6 (id_list -> ID addvar array .)
    COMMA           reduce using rule 6 (id_list -> ID addvar array .)


state 52

    (7) array -> L_BRACKET . CTE_I addDim R_BRACKET jumpAddr

    CTE_I           shift and go to state 59


state 53

    (8) array -> empty .

    SEMICOLON       reduce using rule 8 (array -> empty .)
    COMMA           reduce using rule 8 (array -> empty .)


state 54

    (25) principal -> MAIN start funcChange L_PAREN R_PAREN . bloque endProc
    (26) bloque -> . L_BRACE estatuto_rep R_BRACE

    L_BRACE         shift and go to state 61

    bloque                         shift and go to state 60

state 55

    (13) func -> FUNCTION tipo_func ID addfunc L_PAREN params . R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc

    R_PAREN         shift and go to state 62


state 56

    (21) params -> tipo . ID addvar updateParams params2

    ID              shift and go to state 63


state 57

    (22) params -> empty .

    R_PAREN         reduce using rule 22 (params -> empty .)


state 58

    (5) id_list -> id_list COMMA ID addvar . array
    (7) array -> . L_BRACKET CTE_I addDim R_BRACKET jumpAddr
    (8) array -> . empty
    (88) empty -> .

    L_BRACKET       shift and go to state 52
    SEMICOLON       reduce using rule 88 (empty -> .)
    COMMA           reduce using rule 88 (empty -> .)

    array                          shift and go to state 64
    empty                          shift and go to state 53

state 59

    (7) array -> L_BRACKET CTE_I . addDim R_BRACKET jumpAddr
    (125) addDim -> .

    R_BRACKET       reduce using rule 125 (addDim -> .)

    addDim                         shift and go to state 65

state 60

    (25) principal -> MAIN start funcChange L_PAREN R_PAREN bloque . endProc
    (121) endProc -> .

    $end            reduce using rule 121 (endProc -> .)

    endProc                        shift and go to state 66

state 61

    (26) bloque -> L_BRACE . estatuto_rep R_BRACE
    (27) estatuto_rep -> . estatuto estatuto_rep
    (28) estatuto_rep -> . empty
    (29) estatuto -> . asignacion
    (30) estatuto -> . condicion
    (31) estatuto -> . escritura
    (32) estatuto -> . llamada
    (33) estatuto -> . retorno
    (34) estatuto -> . lectura
    (35) estatuto -> . repeticion
    (88) empty -> .
    (36) asignacion -> . ID stack_operand_id EQUAL stack_operator expOr np_asignacion SEMICOLON
    (37) asignacion -> . var_dim EQUAL stack_operator expOr np_asignacion SEMICOLON
    (51) condicion -> . IF L_PAREN expOr R_PAREN GotoF THEN bloque else_aux
    (46) escritura -> . WRITE L_PAREN escritura_rep R_PAREN SEMICOLON
    (38) llamada -> . ID llamadaEra L_PAREN fakebottom parm checkParamNum R_PAREN checkparentesis Gosub
    (44) retorno -> . RETURN L_PAREN expOr np_return R_PAREN SEMICOLON
    (45) lectura -> . READ L_PAREN ID np_read R_PAREN SEMICOLON
    (54) repeticion -> . WHILE addJump L_PAREN expOr R_PAREN GotoF DO bloque end_while
    (87) var_dim -> . ID stack_operand_id L_BRACKET verDim fakebottom expOr cuadVer R_BRACKET checkparentesis verDimNum cuadVarDim

    R_BRACE         reduce using rule 88 (empty -> .)
    ID              shift and go to state 77
    IF              shift and go to state 79
    WRITE           shift and go to state 80
    RETURN          shift and go to state 81
    READ            shift and go to state 82
    WHILE           shift and go to state 83

    estatuto_rep                   shift and go to state 67
    estatuto                       shift and go to state 68
    empty                          shift and go to state 69
    asignacion                     shift and go to state 70
    condicion                      shift and go to state 71
    escritura                      shift and go to state 72
    llamada                        shift and go to state 73
    retorno                        shift and go to state 74
    lectura                        shift and go to state 75
    repeticion                     shift and go to state 76
    var_dim                        shift and go to state 78

state 62

    (13) func -> FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN . vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (3) vars2 -> . vars vars2
    (4) vars2 -> . empty
    (2) vars -> . VAR tipo COLON id_list SEMICOLON
    (88) empty -> .

    VAR             shift and go to state 9
    L_BRACE         reduce using rule 88 (empty -> .)

    vars2                          shift and go to state 84
    vars                           shift and go to state 7
    empty                          shift and go to state 8

state 63

    (21) params -> tipo ID . addvar updateParams params2
    (91) addvar -> .

    COMMA           reduce using rule 91 (addvar -> .)
    R_PAREN         reduce using rule 91 (addvar -> .)

    addvar                         shift and go to state 85

state 64

    (5) id_list -> id_list COMMA ID addvar array .

    SEMICOLON       reduce using rule 5 (id_list -> id_list COMMA ID addvar array .)
    COMMA           reduce using rule 5 (id_list -> id_list COMMA ID addvar array .)


state 65

    (7) array -> L_BRACKET CTE_I addDim . R_BRACKET jumpAddr

    R_BRACKET       shift and go to state 86


state 66

    (25) principal -> MAIN start funcChange L_PAREN R_PAREN bloque endProc .

    $end            reduce using rule 25 (principal -> MAIN start funcChange L_PAREN R_PAREN bloque endProc .)


state 67

    (26) bloque -> L_BRACE estatuto_rep . R_BRACE

    R_BRACE         shift and go to state 87


state 68

    (27) estatuto_rep -> estatuto . estatuto_rep
    (27) estatuto_rep -> . estatuto estatuto_rep
    (28) estatuto_rep -> . empty
    (29) estatuto -> . asignacion
    (30) estatuto -> . condicion
    (31) estatuto -> . escritura
    (32) estatuto -> . llamada
    (33) estatuto -> . retorno
    (34) estatuto -> . lectura
    (35) estatuto -> . repeticion
    (88) empty -> .
    (36) asignacion -> . ID stack_operand_id EQUAL stack_operator expOr np_asignacion SEMICOLON
    (37) asignacion -> . var_dim EQUAL stack_operator expOr np_asignacion SEMICOLON
    (51) condicion -> . IF L_PAREN expOr R_PAREN GotoF THEN bloque else_aux
    (46) escritura -> . WRITE L_PAREN escritura_rep R_PAREN SEMICOLON
    (38) llamada -> . ID llamadaEra L_PAREN fakebottom parm checkParamNum R_PAREN checkparentesis Gosub
    (44) retorno -> . RETURN L_PAREN expOr np_return R_PAREN SEMICOLON
    (45) lectura -> . READ L_PAREN ID np_read R_PAREN SEMICOLON
    (54) repeticion -> . WHILE addJump L_PAREN expOr R_PAREN GotoF DO bloque end_while
    (87) var_dim -> . ID stack_operand_id L_BRACKET verDim fakebottom expOr cuadVer R_BRACKET checkparentesis verDimNum cuadVarDim

    R_BRACE         reduce using rule 88 (empty -> .)
    ID              shift and go to state 77
    IF              shift and go to state 79
    WRITE           shift and go to state 80
    RETURN          shift and go to state 81
    READ            shift and go to state 82
    WHILE           shift and go to state 83

    estatuto                       shift and go to state 68
    estatuto_rep                   shift and go to state 88
    empty                          shift and go to state 69
    asignacion                     shift and go to state 70
    condicion                      shift and go to state 71
    escritura                      shift and go to state 72
    llamada                        shift and go to state 73
    retorno                        shift and go to state 74
    lectura                        shift and go to state 75
    repeticion                     shift and go to state 76
    var_dim                        shift and go to state 78

state 69

    (28) estatuto_rep -> empty .

    R_BRACE         reduce using rule 28 (estatuto_rep -> empty .)


state 70

    (29) estatuto -> asignacion .

    ID              reduce using rule 29 (estatuto -> asignacion .)
    IF              reduce using rule 29 (estatuto -> asignacion .)
    WRITE           reduce using rule 29 (estatuto -> asignacion .)
    RETURN          reduce using rule 29 (estatuto -> asignacion .)
    READ            reduce using rule 29 (estatuto -> asignacion .)
    WHILE           reduce using rule 29 (estatuto -> asignacion .)
    R_BRACE         reduce using rule 29 (estatuto -> asignacion .)


state 71

    (30) estatuto -> condicion .

    ID              reduce using rule 30 (estatuto -> condicion .)
    IF              reduce using rule 30 (estatuto -> condicion .)
    WRITE           reduce using rule 30 (estatuto -> condicion .)
    RETURN          reduce using rule 30 (estatuto -> condicion .)
    READ            reduce using rule 30 (estatuto -> condicion .)
    WHILE           reduce using rule 30 (estatuto -> condicion .)
    R_BRACE         reduce using rule 30 (estatuto -> condicion .)


state 72

    (31) estatuto -> escritura .

    ID              reduce using rule 31 (estatuto -> escritura .)
    IF              reduce using rule 31 (estatuto -> escritura .)
    WRITE           reduce using rule 31 (estatuto -> escritura .)
    RETURN          reduce using rule 31 (estatuto -> escritura .)
    READ            reduce using rule 31 (estatuto -> escritura .)
    WHILE           reduce using rule 31 (estatuto -> escritura .)
    R_BRACE         reduce using rule 31 (estatuto -> escritura .)


state 73

    (32) estatuto -> llamada .

    ID              reduce using rule 32 (estatuto -> llamada .)
    IF              reduce using rule 32 (estatuto -> llamada .)
    WRITE           reduce using rule 32 (estatuto -> llamada .)
    RETURN          reduce using rule 32 (estatuto -> llamada .)
    READ            reduce using rule 32 (estatuto -> llamada .)
    WHILE           reduce using rule 32 (estatuto -> llamada .)
    R_BRACE         reduce using rule 32 (estatuto -> llamada .)


state 74

    (33) estatuto -> retorno .

    ID              reduce using rule 33 (estatuto -> retorno .)
    IF              reduce using rule 33 (estatuto -> retorno .)
    WRITE           reduce using rule 33 (estatuto -> retorno .)
    RETURN          reduce using rule 33 (estatuto -> retorno .)
    READ            reduce using rule 33 (estatuto -> retorno .)
    WHILE           reduce using rule 33 (estatuto -> retorno .)
    R_BRACE         reduce using rule 33 (estatuto -> retorno .)


state 75

    (34) estatuto -> lectura .

    ID              reduce using rule 34 (estatuto -> lectura .)
    IF              reduce using rule 34 (estatuto -> lectura .)
    WRITE           reduce using rule 34 (estatuto -> lectura .)
    RETURN          reduce using rule 34 (estatuto -> lectura .)
    READ            reduce using rule 34 (estatuto -> lectura .)
    WHILE           reduce using rule 34 (estatuto -> lectura .)
    R_BRACE         reduce using rule 34 (estatuto -> lectura .)


state 76

    (35) estatuto -> repeticion .
